--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no,user-scalable=no">
     <title>PT短网址</title>
-    <meta name="keywords" content="许坏,短链接生成,新浪短连接,腾讯短连接,pt短网址,橡皮糖">
-    <meta name="description" content="PT短网址 - 免费的短网址生成与还原">
-    <meta property="og:description" content="PT短网址 - 免费的短网址生成与还原">
+    <meta name="keywords" content="短链接生成,新浪短连接,腾讯短连接">
+    <meta name="description" content="免费的短网址生成与还原">
+    <meta property="og:description" content="免费的短网址生成与还原">
     <meta property="og:type" content="acticle">
     <meta property="og:locale" content="zh-CN" />
-    <meta property="og:site_name" content="PT短网址">
-    <meta property="og:title" content="PT短网址">
+    <meta property="og:site_name" content="短网址">
+    <meta property="og:title" content="短网址">
     <link rel="shortcut icon" href="./assets/img/favicon.ico" />
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
