--- a/index.html
+++ b/index.html
@@ -61,24 +61,24 @@
                     </div>
                 </div>
                 <ul class="navbar-nav">
-                    <li class="nav-item p-0">
+<!--                     <li class="nav-item p-0">
                         <a class="nav-link" rel="tooltip" title="Join us on QQ" data-placement="bottom" href="https://qm.qq.com/cgi-bin/qm/qr?k=qtt_rl4_v5o0zH_Z65CAQx1F6_TknEGW&noverify=0" target="_blank">
                             <i class="fab fa-qq"></i>
                             <p class="d-lg-none d-xl-none">QQ</p>
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item p-0">
                         <a class="nav-link" rel="tooltip" title="Like us on Github" data-placement="bottom" href="https://github.com/xuhuai66" target="_blank">
                             <i class="fab fa-github" aria-hidden="true"></i>
                             <p class="d-lg-none d-xl-none">github</p>
                         </a>
                     </li>
-                    <li class="nav-item p-0">
+<!--                     <li class="nav-item p-0">
                         <a class="nav-link" rel="tooltip" title="Follow us on Blog" data-placement="bottom" href="https://www.zhai78.com" target="_blank">
                             <i class="fa fa-heart" aria-hidden="true"></i>
                             <p class="d-lg-none d-xl-none">Blog</p>
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link btn btn-default d-none d-lg-block" href="https://github.com/xuhuai66/pt-dwz" target="_blank">
                             <i class="tim-icons icon-cloud-download-93"></i> Download
